src/tests/errors/lexing/test03.cmp
program main 
begin
    var x : 2int  /* wrong id */
end 